# ClipSelector

./: .gitignore  CMakeLists.txt  Main.qml  MusicSelector.qml  OffsetSelector.qml  SubClipTable.qml  VideoPlayer.qml  audiofilemodel.cpp  audiofilemodel.h  audiospect.cpp  audiospect.h  clipmodel.cpp  clipmodel.h  filteredmodel.cpp  filteredmodel.h  main.cpp  maincontroller.cpp  maincontroller.h  utils.cpp  utils.h
